src/css/main.scss
$panel-body-height: 75vh;


html, body {
    height: 100%;
    width: 100%;
}

/* MAIN */

*, *:before, *:after {
    box-sizing: border-box;
}

html, body {
    padding: 0;
    margin: 0;
}

html {
    width: 100%;
    height: 100%;
}

body {
    background-color: white;
}

/* HEADER */

header {
    height: 75px;
}

.header-main {
    height: 75px;
}

.header-logo {
    height: 100%;
}

.header-navWrap {
    height: 100%;
}

.header-toolBar {
    height: 100%;
}

.header-toolBar_ul {
    display: flex;
    justify-content: flex-end;
    height: 100%;
    margin-bottom: 0;

}

.header-toolBar_ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.header-toolBar_ul i {
    /* should be variables here */
    font-size: 2em;
    color: white;
}

.header-toolBar_ul-search {
    font-size: 2em;
    line-height: 3;
}

.header-toolBar_ul li {
    color: white;
    text-align: center;
    line-height: 6;
    width: 15%;
}

.header-toolBar_ul-img {
    border-radius: 50%;
}

input {
    outline: none;
}
input[type=search] {
    font-family: inherit;
    font-size: 100%;
}

input[type=search] {
    background: #525151  url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30'><circle cx='15' cy='15' r='10' /></svg>") no-repeat 6px center;
    border: none;
    padding: 9px 10px 9px 32px;
    width: 20px;
    border-radius: 10em;
    transition: all .5s;
}

input[type=search]:focus {
    width: 100%;
    background-color: #fff;
    border-color: #d3d3d3;
    box-shadow: 0 0 5px rgba(127,127,127, 0.8);
}

.header-toolBar > ul > li.header-toolBar_anim {
    width: 35%;
    text-align: right;
    margin-right: 20px;
    color: #333;
}

.header-toolBar_anim input[type="search"] {
    height: calc(75px / 2);
}

.header-toolBar_anim input[type="search"]:hover {
    background-color: #d9d9d9
;
}

.main-dashboard {
    margin-top: 2rem;
}

.main-dashboard_span:after {
    content: '\f101 ';
    font-family: 'FontAwesome';
    margin: 0 5px 5px;
}

.main-dashboard_panel {
    background: grey;
    height: 35px;
    box-shadow: 0px 2px 2px black;
}

.main-dashboard_title {
    overflow: auto;
    margin-left: 8px;
}

.main-dashboard_title h4 {
    color: white;
    text-shadow: 0 1px black;
}

.main-dashboard_info {
    height: 100px;
    box-shadow: 0px 1px 1px black;
    background: #92a3b1;
    margin-top: 1px;
}

.main-dashboard_info h1 {
    color: white;
    text-shadow: 0 1px black;
    margin-top: 0;
    margin-left: 5px;
}

.main-panel_heading {
    padding: 10px 15px;
    border-bottom: 1px solid transparent;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    background-color: #525151;
    font-size: 20px;
    color: white;
}

.panel-body {
    height: $panel-body-height;
}

.dashboard-icon {
    position: relative;
    top: 7px;
    text-align: center;
    width: 50px;
    height: 50px;
    background: black;
    border-radius: 50%;
    float: left;
    display: block;
}

.dashboard-icon i {
    position: relative;
    top: 25%;
    font-size: 24px;
    color: white;
}

.widget-user_title {
    text-transform: uppercase;
    margin: 0;
}

.widget-user_data {
    color: #3cb371;
}

.dashboard-entity {
    padding-left: 0px;
    margin-top: 10px;
    width: 100%;
    float: left;
}

.dashboard-notifications {
    margin-top: 10px;
    width: 100%;
    float: left;
    margin-top: 10px;
    margin-bottom: 10px;
    background: black;
    padding: 5px 5px 5px 5px;
    color:white;
}

.dashboard-rightSide {
    height: 150px;
    float: right;
}

.dashboard-tabControl ul {
    overflow: auto;
    text-transform: uppercase;
    color: whitesmoke;
    background: #7DC58E;
}

.dashboard-tabControl li {
    width: 25%;
    height: 50px;
    text-align: center;
    line-height: 3.5;
    text-shadow: 1px 1px 3px black;
    float: left;
}


.dashboard-tabControl li {
    border-right: 1px solid black;
    border-right-width: 1px;
}

.dashboard-tabControl li:first-child {
    border-bottom: 3px solid green;
}

.dashboard-tabControl li:first-child:after {
    content: '2';
    width: 20px;
    height: 20px;
    background: red;
    color: white;
    border-radius: 50%;
    position: absolute;
    top: 3px;
    line-height: 1.5;
}

.dashboard-tabControl ul > li:nth-child(2):after {
    content: '2';
    width: 20px;
    height: 20px;
    background: red;
    color: white;
    border-radius: 50%;
    position: absolute;
    top: 3px;
    line-height: 1.5;
}

.dashboard-tabControl ul > li:nth-child(4):after {
    content: '\f0d7';
    font-family: 'FontAwesome';
    width: 20px;
    height: 20px;
    position: relative;
    left: 55px;
    font-size: 40px;
    top: 10px;
    line-height: 0px;
}

.dashboard-commentBoard li {
    list-style: none;
    background: #d1703c;
    color: #fff;
    line-height: 2em;
    padding: 0 0.5em;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    margin-top:5px;
    margin-bottom: 5px;
    overflow: hidden;
}


li.new-item {
    opacity: 0;
    animation: fadeIn .3s linear forwards;
}

@keyframes fadeIn {
    to {
        opacity: 1;
    }
}

.dashboard-input input {
    width: 85%;
}


.dashboard-input button {
    width: 14%;
    float: right;
}

@media (max-width: 767px) {
}

@media (max-width: 500px) {

}

